--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@tanstack/react-table": "^8.5.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6"
