--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-table": "^8.5.11",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
