--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-table": "^8.5.11",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
