--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "formik": "^2.2.9",
+    "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
