--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mantine/hooks": "^5.2.5",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@mui/x-date-pickers": "^5.0.0",
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-table": "^8.5.11",
     "axios": "^0.27.2",
@@ -23,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
+    "utility-types": "^3.10.0",
     "yup": "^0.32.11",
     "zustand": "^4.0.0"
   },
