--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^5.2.5",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@mui/x-data-grid": "^5.17.2",
     "@mui/x-date-pickers": "^5.0.0",
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-table": "^8.5.11",
