--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "material-ui-popup-state": "^4.0.2",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "utility-types": "^3.10.0",
